tests/programs/invalid/native.java
public class native {
    public native int m();
}